@@ -14,8 +14,14 @@
     xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
+    
+    <parent>
+        <groupId>com.telenav</groupId>
+        <artifactId>telenav-root-superpom</artifactId>
+        <version>1.0.0</version>
+        <relativePath>../telenav-root-superpom</relativePath>
+    </parent>
 
-    <groupId>com.telenav</groupId>
     <artifactId>telenav-superpom-project-family</artifactId>
     <version>2.0.0</version>
 
@@ -28,35 +34,18 @@
     </description>
 
     <properties>
-        <cactus.maven.plugin.version>1.4.22</cactus.maven.plugin.version>
-        <cactus.maven.plugin.prev.version>1.4.21</cactus.maven.plugin.prev.version>
+        <cactus.maven.plugin.version>1.4.24</cactus.maven.plugin.version>
+        <cactus.maven.plugin.prev.version>1.4.23</cactus.maven.plugin.prev.version>
         <!-- Version range for cactus - the bump-version will automatically update will
         automatically update the above two properties, and we use this in a
         dependencyManagement section, which allows plugin resolution to pick it up 
         (you can't use a verison range directly in a plugin block)-->
         <cactus.maven.plugin.verbose>false</cactus.maven.plugin.verbose>
         <cactus.maven.plugin.versions>[${cactus.maven.plugin.prev.version}, ${cactus.maven.plugin.version}]</cactus.maven.plugin.versions>
-        <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
-        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
-        <maven.javadoc.plugin.version>3.4.0</maven.javadoc.plugin.version>
         <do.not.publish>false</do.not.publish>
         <release.on.close>false</release.on.close>
         <mastfrog.version>2.8.3</mastfrog.version>
     </properties>
-
-    <!-- Publishing -->
-
-    <distributionManagement>
-        <snapshotRepository>
-            <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-
-        <repository>
-            <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
 
     <dependencyManagement>
         <dependencies>
@@ -74,101 +63,19 @@
 
     <profiles>
         <profile>
-            <id>new-snapshot-version</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.telenav.cactus</groupId>
-                        <artifactId>cactus-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>bump-version</id>
-                                <phase>initialize</phase>
-                                <goals>
-                                    <goal>bump-version</goal>
-                                </goals>
-                                <configuration>
-                                    <scope>family</scope>
-                                    <includeRoot>false</includeRoot>
-                                    <versionFlavorChange>to-snapshot</versionFlavorChange>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>commit-new-version</id>
-                                <phase>validate</phase>
-                                <goals>
-                                    <goal>commit</goal>
-                                </goals>
-                                <configuration>
-                                    <!-- cactus.version.change.description is injected into the project by the bump-version mojo -->
-                                    <commitMessage>Update version to snapshot ${cactus.version.change.description}</commitMessage>
-                                    <push>false</push>
-                                </configuration>
-                            </execution>
-
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>new-release-version</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.telenav.cactus</groupId>
-                        <artifactId>cactus-maven-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>bump-version</id>
-                                <phase>initialize</phase>
-                                <goals>
-                                    <goal>bump-version</goal>
-                                </goals>
-                                <configuration>
-                                    <cactus.scope>family</cactus.scope>
-                                    <cactus.include-root>false</cactus.include-root>
-                                    <cactus.version.flavor.change>to-release</cactus.version.flavor.change>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>commit-new-version</id>
-                                <phase>validate</phase>
-                                <goals>
-                                    <goal>commit</goal>
-                                </goals>
-                                <configuration>
-                                    <!-- cactus.version.change.description is injected into the project by the bump-version mojo -->
-                                    <cactus.commit-message>Update version to release ${cactus.version.change.description}</cactus.commit-message>
-                                    <cactus.push>false</cactus.push>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
             <id>release</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
             <properties>
                 <maven.test.skip.exec>true</maven.test.skip.exec>
+                <maven.shade.skip>true</maven.shade.skip>
             </properties>
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-javadoc-plugin</artifactId>
-                        <version>${maven.javadoc.plugin.version}</version>
                         <executions>
                             <execution>
                                 <id>aggregate-javadoc</id>
@@ -177,6 +84,13 @@
                                     <goal>javadoc-no-fork</goal>
                                     <goal>aggregate-no-fork</goal>
                                 </goals>
+                                <configuration>
+                                    <!-- add-reads is an experimental javadoc option -->
+                                    <additionalOptions>
+                                        --add-reads org.apiguardian.api=ALL-UNNAMED
+                                    </additionalOptions>                        
+
+                                </configuration>
                             </execution>
                         </executions>
                     </plugin>
@@ -196,6 +110,19 @@
                                 </configuration>
                             </execution>
                             <execution>
+                                <!-- This will check each pom against maven central
+                                to see if it has already been published.  If it
+                                has been and the published pom is identical, it
+                                will tell nexus to skip publishing it; if it has
+                                been published but the pom is not identical, it
+                                will fail the build here. -->
+                                <id>check-published</id>
+                                <phase>initialize</phase>
+                                <goals>
+                                    <goal>check-published</goal>
+                                </goals>
+                            </execution>
+                            <execution>
                                 <id>lexakai</id>
                                 <phase>package</phase>
                                 <goals>
@@ -211,28 +138,19 @@
                                 <id>copy-javadoc</id>
                                 <phase>install</phase>
                                 <goals>
-                                    <goal>copy-aggregated-javadoc</goal>
                                     <goal>codeflowers</goal>
+                                    <goal>copy-aggregated-javadoc</goal>
                                 </goals>
                                 <configuration>
-                                    <cactus.family>family-or-child-family</cactus.family>
+                                    <cactus.scope>family-or-child-family</cactus.scope>
                                 </configuration>
                             </execution>
                         </executions>
                     </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>sign-artifacts</id>
-            <build>
-                <plugins>
-
                     <plugin>
 
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
-                        <version>${maven-gpg-plugin.version}</version>
                         <executions>
 
                             <execution>
@@ -252,127 +170,10 @@
                             </execution>
                         </executions>
                     </plugin>
+                    
                 </plugins>
             </build>
         </profile>
     </profiles>
-    <repositories>
-
-        <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>central</id>
-            <name>Maven Central</name>
-            <url>https://repo1.maven.org/maven2</url>
-        </repository>
-
-        <repository>
-            <id>ossrh</id>
-            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
-
-    <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.sonatype.plugins</groupId>
-                    <artifactId>nexus-staging-maven-plugin</artifactId>
-                    <version>${nexus-staging-maven-plugin.version}</version>
-                    <extensions>true</extensions>
-                    <configuration>
-                        <serverId>ossrh</serverId>
-                        <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
-                        <autoReleaseAfterClose>${release.on.close}</autoReleaseAfterClose>
-                        <skipStaging>${do.not.publish}</skipStaging>
-                        <skipLocalStaging>true</skipLocalStaging>
-                        <keepStagingRepositoryOnCloseRuleFailure>true</keepStagingRepositoryOnCloseRuleFailure>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
-
-    <!-- Licensing -->
-
-    <licenses>
-        <license>
-            <name>Apache License, Version 2.0</name>
-            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-
-    <!-- Source Code -->
-
-    <scm>
-        <connection>scm:git:https://Telenav/kivakit.git</connection>
-        <developerConnection>scm:git:https://Telenav/kivakit.git</developerConnection>
-        <url>https://Telenav/kivakit.git</url>
-    </scm>
-
-    <url>https://www.telenav.com/</url>
-
-    <inceptionYear>2011</inceptionYear>
-
-    <organization>
-        <name>Telenav</name>
-        <url>https://www.telenav.com</url>
-    </organization>
-
-    <!-- Contributors -->
-
-    <developers>
-
-        <developer>
-
-            <id>jonathanl</id>
-            <name>Jonathan Locke (Luo Shibo)</name>
-            <email>jonathanl@telenav.com</email>
-            <organization>Telenav</organization>
-            <organizationUrl>https://www.telenav.com/</organizationUrl>
-            <roles>
-                <role>lead</role>
-                <role>administrator</role>
-            </roles>
-
-        </developer>
-
-        <developer>
-
-            <id>haifeng</id>
-            <name>Haifeng Zhu</name>
-            <email>hfzhu@telenav.com</email>
-            <organization>Telenav</organization>
-            <organizationUrl>https://www.telenav.com/</organizationUrl>
-            <roles>
-                <role>developer</role>
-                <role>administrator</role>
-            </roles>
-
-        </developer>
-
-        <developer>
-
-            <id>timboudreau</id>
-            <name>Tim Boudreau</name>
-            <email>tim@timboudreau.com</email>
-            <organization>Telenav</organization>
-            <organizationUrl>https://www.telenav.com/</organizationUrl>
-            <roles>
-                <role>developer</role>
-                <role>administrator</role>
-            </roles>
-
-        </developer>
-
-    </developers>
 
 </project>
